--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
 services:
   - type: web
-    name: ecom-proj
+    name: ShopEasy
     env: java
     plan: free
-    buildCommand: mvn clean package -DskipTests
-    startCommand: java -jar target/ecom-proj-0.0.1-SNAPSHOT.jar
+    buildCommand: mvn -f ecom-proj/pom.xml clean package -DskipTests
+    startCommand: java -jar ecom-proj/target/ecom-proj-0.0.1-SNAPSHOT.jar
     envVars:
       - key: JAVA_VERSION
         value: 21
-
