Initial Spring Boot project commit

--- a/ecom-proj/Dockerfile
+++ b/ecom-proj/Dockerfile
@@ -1,16 +1,18 @@
-# Use Java 25 instead of 17
-FROM openjdk:25-jdk-slim
-
-# Copy project files
+# Step 1: Build the application
+FROM maven:3.9.6-eclipse-temurin-21 AS builder
 WORKDIR /app
-COPY . .
 
-# Give permission to mvnw (if not already executable)
-RUN chmod +x mvnw
+# Copy pom.xml and download dependencies first (for caching)
+COPY pom.xml .
+RUN mvn dependency:go-offline
 
-# Build the project
-RUN ./mvnw clean package -DskipTests
+# Copy the rest of the project and build the jar
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-# Run the JAR
-CMD ["java", "-jar", "target/*.jar"]
-
+# Step 2: Run the jar file
+FROM eclipse-temurin:21-jdk
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
