--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: shopeasy
+    name: ecom-proj
     env: java
-    buildCommand: ./mvnw clean install
-    startCommand: java -jar target/*.jar
+    plan: free
+    buildCommand: mvn clean package -DskipTests
+    startCommand: java -jar target/ecom-proj-0.0.1-SNAPSHOT.jar
     envVars:
       - key: JAVA_VERSION
         value: 21
+
