Updated frontend and backend files with fixes and cleanup

--- a/ecom-proj/src/main/resources/application.properties
+++ b/ecom-proj/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
+
+# ✅ H2 Console access
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
