Updated frontend and backend files with fixes and cleanup

--- a/ecom-proj/src/main/resources/application.properties
+++ b/ecom-proj/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=ecom-proj
 
-# ✅ Persistent H2 configuration
-spring.datasource.url=jdbc:h2:file:./data/WebAppDB
+spring.datasource.url=jdbc:h2:file:/opt/render/project/src/data/WebAppDB
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
 
 # ✅ H2 Console access
 spring.h2.console.enabled=true
